# mip-gabor

./: CMakeLists.txt  DisplayImage.cpp  ITK_Filters.pptx  cgf.m  cv_filter.cpp  cv_itk.hpp  cv_itk_filters.cpp  filter.cpp  gabor.cpp  gabor.hpp  gabor_src.cpp  retina.cpp  setup.sh
cvpr/: cvGaborFilter2Demo.m
edgedetectionweb/: inhibition.m
edgedetectionweb/WEB/: edgedetection.html  edgedetection1.html  edgedetection2.html  edgedetection_error.html  edgedetection_examples.html  edgedetection_matfile.html  edgedetection_params.html  edgedetection_uploading.html  index.html
icgf/: .icgf.m.kate-swp  cgf_Zi.m  cgf_Zr.m  cgf_cos.m  cgf_demo.m  cgf_sin.m  cvCircularGaborFilter2.m  cvCircularGaborFilter2Demo.m  cvGaborFilter2Demo.m  icgf.m  icgf_demo.m  iso_gauss2.m
kp/: CMakeLists.txt  kp.cpp
